tests/paczka1/small_fuzzy/80423479.err
Error in line 7: dckteveDk A200 59,29
Error in line 6: M9iy S482 55,6
Error in line 4: CUNT14iCRnY S663 65,8
